--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
-  <body>
-    <div id="root"></div>
+  <body style='display: flex;'>
+    <div id="root" style='display: flex; flex-direction: column; width: 100%;'></div>
   </body>
 </html>
