--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!-- src/template.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
-  <body style='display: flex;'>
-    <div id="root" style='display: flex; flex-direction: column; width: 100%;'></div>
+  <body style="margin: 0; height: 100vh; display: flex; flex-direction: column">
+    <div id="root" style="flex: 1; display: flex; flex-direction: column"></div>
   </body>
 </html>
